--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,20 @@
 <view class="weather-wrapper">
+  <button class="location-wrapper" open-type="{{ locationAuthType==1 ? 'openSetting' : ''}}" bindopensetting="onTapLocation" bindtap="onTapLocation" plain="true">
+    <view class='location'>
+      <image class='location-icon' src='/images/location-icon.png'></image>
+      <view class='location-text'>{{city}}</view>
+    </view>
+    <view class='location-tips'>{{locationTipsText}}</view>
+  </button>
   <view class="temp">{{temp}}</view>
   <view class="weather">{{weather}}</view>
   <image class='weather-bg' src="{{nowWeatherBackground}}" mode="scallToFill"></image>
+
+  <view class='day-weather' bindtap='onTapDayWeather'>
+    <view class='day-text'>{{todayDate}}</view>
+    <view class='temp-text'>{{todayTemp}}</view>
+    <image class='arrow-icon' src='/images/arrow.png'></image>
+  </view>
 </view>
 
 <view class="timetips">
@@ -9,4 +22,13 @@
   <view class='timetips-text'>未来24小时天气预测</view>
 </view>
 
-<view wx:for="{{[1,2,3,4,5]}}">{{item}}</view>
+<scroll-view scroll-x>
+  <view class="forecast-list">
+    <view class='forecast-item' wx:for="{{hourlyWeather}}">
+    <view class='forecast-time'>{{item.time}}</view>
+    <image class='forecast-weather'
+      src='{{item.iconPath}}'></image>
+    <view class='forecast-temp'>{{item.temp}}</view>
+    </view>
+  </view>
+</scroll-view>
