--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -14,7 +14,7 @@
 
 .weather-wrapper{
   position: relative;
-  padding-top: 174rpx;
+  padding-top: 20rpx;
   padding-bottom: 250rpx;
 }
 
@@ -32,14 +32,99 @@
   margin-top: 40rpx;
   justify-content: center;
   align-items: center;
+  margin-bottom: 45rpx;
 }
+
 .timetips-icon{
   margin-right: 10rpx;
   width: 36rpx;
   height: 28rpx;
 }
+
 .timetips-text{
   font-size: 30rpx;
   line-height: 42rpx;
   opacity: 0.5;
+}
+
+.forecast-list{
+  display: flex;
+}
+
+.forecast-item{
+  display: flex;
+  flex-direction: column;
+  width:120rpx;
+  flex-shrink: 0;
+  align-items: center;
+}
+
+.forecast-time{
+  font-size: 30rpx;
+  line-height: 42rpx;
+}
+
+.forecast-temp{
+  margin-top: 46rpx;
+  font-size: 40rpx;
+  line-height: 56rpx;
+}
+
+.forecast-weather{
+  margin-top: 50rpx;
+  width: 60rpx;
+  height: 60rpx;
+}
+
+.day-weather{
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 40rpx;
+  right: 40rpx;
+  height: 90rpx;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  font-size: 30rpx;
+  line-height: 42rpx;
+  opacity: 0.5;
+}
+
+.temp-text{
+  flex-grow: 1;
+  padding-right: 30rpx;
+  text-align: right;
+}
+
+.arrow-icon{
+  width: 13rpx;
+  height: 24rpx;
+}
+
+.location-wrapper{
+  margin-bottom: 60rpx;
+  font-size: 30rpx;
+  line-height: 42rpx;
+  color: rgba(0, 0, 0, 0.5)!important;
+  border: none!important;
+  padding: 0!important;
+}
+.location{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.location-icon{
+  margin-right: 10rpx;
+  width: 21rpx;
+  height: 30rpx;
+}
+.location-text{
+  opacity: 0.5;
+}
+.location-tips{
+  margin-top: 10rpx;
+  text-align: center;
+  opacity: 0.5;
+  height: 42rpx;
 }
